Shrunk nav font size and margins slightly, to fix horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -166,12 +166,12 @@ nav {
 nav ul {
   display: flex;
   justify-content: space-around;
-  margin: 10px;
+  margin: 10px 5px;
 }
 
 nav ul li {
   padding: 0 20px;
-  font-size: 1.75em;
+  font-size: 1.5em;
 }
 
 nav span {
